Added the placeholder image and adjusted the css

--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="image">
-            <img src="image/form.jpg" alt="/" />
+            <img src="image/placeholder.png" alt="/" />
         </div>
         <div class="fom">
             <form action="" method="post">
